--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,5 +2,6 @@
     name: Add copyright header
     description: Adds a copyright header to Python files
     entry: python3 pre_commit_hooks/add_header.py
-    language: system
-    files: \.py$
+    language: python
+    files: ^Dockerfile.*$|\.(py|yaml|yml|sh|R)$
+
