--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,3 +1,13 @@
+# =================================================================
+#
+# Authors: Benjamin Webb <40066515+webb-ben@users.noreply.github.com>
+#
+# Copyright (c) 2025 Lincoln Institute of Land Policy
+#
+# Licensed under the MIT License.
+#
+# =================================================================
+
 name: flake8 ⚙️
 
 on: [ push, pull_request ]
