--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,13 @@
+# =================================================================
+#
+# Authors: Benjamin Webb <40066515+webb-ben@users.noreply.github.com>
+#
+# Copyright (c) 2025 Lincoln Institute of Land Policy
+#
+# Licensed under the MIT License.
+#
+# =================================================================
+
 repos:
   - repo: local
     hooks:
