--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,3 +1,13 @@
+# =================================================================
+#
+# Authors: Benjamin Webb <40066515+webb-ben@users.noreply.github.com>
+#
+# Copyright (c) 2025 Lincoln Institute of Land Policy
+#
+# Licensed under the MIT License.
+#
+# =================================================================
+
 -   id: add-header
     name: Add copyright header
     description: Adds a copyright header to Python files
