Use system invocation of pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     hooks:
       - id: add-header
         name: Add copyright header
+        description: Adds a copyright header to files
         entry: python3 pre_commit_hooks/add_header.py
         language: python
         types: [file]
